--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -3,6 +3,7 @@
     "briWhenNotReachableInfo": "Diese Option schaltet die Helligkeit (<pre>brightness</pre> bzw. <pre>level</pre>) auf 0, wenn das Gerät nicht erreichbar ist (<pre>reachable</pre> auf <pre>false</pre>).",
     "briWhenOff": "Setze Helligkeit auf 0, wenn das Gerät ausgeschaltet wird",
     "briWhenOffInfo": "Diese Option schaltet die Helligkeit (<pre>brightness</pre> bzw. <pre>level</pre>) auf 0, wenn das Gerät ausgeschaltet wird (<pre>on</pre> auf <pre>false</pre>).",
+    "bridgeType": "Typ",
     "buttonDismiss": "schließen",
     "buttonNotAgain": "nicht wieder anzeigen",
     "button_closeModal": "Abbrechen",
@@ -10,14 +11,13 @@
     "certChained": "Chained Zertifikat",
     "certPrivate": "Privater Schlüssel",
     "certPublic": "Öffentliches Zertifikat",
-    "connectionInformation": "Verbindungsinformationen für Ihre Hue-Bridge",
-    "connectionTitle": "Verbindungseinstellungen für die Hue Bridge",
+    "connectionTitle": "Verbindungseinstellungen",
     "ctToXY": "Verwenden von <pre>XY</pre> anstelle von <pre>ct</pre> (nur für nicht-Philips-Geräte)",
     "donateInformation": "Neue Funktionen / Features können gerne über Github oder das ioBroker Forum angefragt werden. Wenn dieser Adapter gefällt / nützlich ist, sind Spenden herzlich Willkommen.",
     "donateTitle": "Unterstützung der Entwicklung des hue-extended Adapters!",
     "garbageCollector": "Nicht aktualisierte Geräte vom Objekt-Baum löschen",
     "garbageCollectorInfo": "Der Garbage Collector löscht alte Geräte, die innerhalb von 24 Stunden nicht aktualisiert wurden, vom Objekt-Baum.",
-    "getUserInfo": "Zunächst den Button an der Hue Bridge drücken! Danach mit dem Button -Neuen Benutzer abrufen- fortfahren.",
+    "getUserInfo": "Zunächst den Button an der Hue Bridge drücken bzw. das Gerät in den Pairing-Modus setzen! Danach mit dem Button -Neuen Benutzer abrufen- fortfahren.",
     "hueToXY": "Verwenden von <pre>XY</pre> anstelle von <pre>hue</pre> (nur für nicht-Philips-Geräte)",
     "hueToXYInfo": "Die Einstellung des <pre>hue</pre> Wertes kann trotz erfolgreich abgeschickten Befehl bei nicht-Philips-Geräte fehlschlagen. Mit dieser Option sendet der Adapter das Kommando immer als <pre>XY</pre> statt als <pre>hue</pre> Befehl (nur für nicht-Philips-Geräte).",
     "ip": "Bridge IP",
