--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -3,6 +3,7 @@
     "briWhenNotReachableInfo": "This options sets the <pre>brightness</pre> / <pre>level</pre> to 0, when the device is not reachable (<pre>reachable</pre> auf <pre>false</pre>).",
     "briWhenOff": "Set brightness to 0, when device is turned off",
     "briWhenOffInfo": "This options sets the <pre>brightness</pre> / <pre>level</pre> to 0, when the device is turned off (<pre>on</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Dismiss",
     "buttonNotAgain": "Don't show again",
     "button_closeModal": "Cancel",
@@ -10,14 +11,13 @@
     "certChained": "Chained Certificate",
     "certPrivate": "Private Key",
     "certPublic": "Public Certificate",
-    "connectionInformation": "Provide connection information for your Hue Bridge",
-    "connectionTitle": "Connection settings for Hue Bridge",
+    "connectionTitle": "Connection settings",
     "ctToXY": "Use <pre>XY</pre> instead of <pre>ct</pre> (only for non-Philips devices)",
     "donateInformation": "Feel free to suggest new features via Github or ioBroker forum. If you like this adapter, you very welcome to donate.",
     "donateTitle": "Support the development of the hue-extended Adapter!",
     "garbageCollector": "Delete outdated devices from objects",
     "garbageCollectorInfo": "The Garbage Collector deletes outdated devices from the object tree which have not been updated within 24 hours.",
-    "getUserInfo": "Press the button on your Hue Bridge first! Afterwards, press the button -Get new user-.",
+    "getUserInfo": "Press the button on your Hue Bridge or activate pairing mode first! Afterwards, press the button -Get new user-.",
     "hueToXY": "Use <pre>XY</pre> instead of <pre>hue</pre> (only for non-Philips devices)",
     "hueToXYInfo": "When setting the <pre>hue</pre> state, non-Philips devices may fail to process this even though the command has successfully been applied. With this option, the adapter will always send the <pre>hue</pre> state as <pre>XY</pre> command to non-Philips devices.",
     "ip": "Bridge IP",
