--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Configurar el brillo a 0, cuando el dispositivo está apagado",
+    "briWhenNotReachable": "Configurar el brillo a 0, cuando el dispositivo no es accesible",
     "briWhenNotReachableInfo": "Esta opción establece el <pre>brillo</pre> / <pre>nivel</pre> a 0, cuando el dispositivo no está accesible (<pre>accesible</pre> auf <pre>false</pre>).",
     "briWhenOff": "Configurar el brillo a 0, cuando el dispositivo está apagado",
     "briWhenOffInfo": "Esta opción establece el <pre>brillo</pre> / <pre>nivel</pre> a 0, cuando el dispositivo está apagado (<pre>en</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Descartar",
     "buttonNotAgain": "No volver a mostrar",
     "button_closeModal": "Cancelar",
     "button_getUser": "Obtener nuevo usuario",
-    "certChained": "Certificado encadenado",
-    "certPrivate": "Llave privada",
-    "certPublic": "Certificado publico",
-    "connectionInformation": "Proporcionar información de conexión para el Puente Hue",
-    "connectionTitle": "Ajustes de conexión para el Puente Hue",
-    "ctToXY": "Use <pre> XY </pre> en lugar de <pre> ct </pre> (solo para dispositivos que no sean Philips)",
+    "certChained": "Encadenado Certificado",
+    "certPrivate": "Clave Privada",
+    "certPublic": "Certificado Público",
+    "connectionTitle": "Configuración de la conexión",
+    "ctToXY": "El uso de <pre>XY</pre> en lugar de <pre>ct</pre> (sólo por la falta de dispositivos Philips)",
     "donateInformation": "Siéntase libre de sugerir nuevas características a través de Github o ioBroker foro. Si te gusta este adaptador, usted muy bienvenido a donar.",
     "donateTitle": "Apoyar el desarrollo de los hue-extendida Adaptador!",
     "garbageCollector": "Eliminar dispositivos obsoletos de objetos",
     "garbageCollectorInfo": "El Recolector de Basura elimina dispositivos obsoletos desde el árbol de objetos que no han sido actualizados en un plazo de 24 horas.",
-    "getUserInfo": "Pulse el botón en su Tono Puente de primero! Después, presione el botón -Obtener nueva por el usuario.",
-    "hueToXY": "Uso XY en lugar de tono (sólo por la falta de dispositivos Philips)",
-    "hueToXYInfo": "Cuando ajuste el matiz de estado, no de Philips dispositivos pueden fallar para este proceso a pesar de que el comando se ha aplicado con éxito. Con esta opción, el adaptador de enviar siempre el matiz estado como xy comando para no dispositivos Philips.",
+    "getUserInfo": "Pulse el botón en su Tono de Puente o activar el modo de emparejamiento primero! Después, presione el botón -Obtener nueva por el usuario.",
+    "hueToXY": "El uso de <pre>XY</pre> en lugar de <pre>hue</pre> (sólo por la falta de dispositivos Philips)",
+    "hueToXYInfo": "Cuando la configuración de la <pre>hue</pre> estado, no de Philips dispositivos pueden fallar para este proceso a pesar de que el comando se ha aplicado con éxito. Con esta opción, el adaptador de enviar siempre la <pre>hue</pre> estado como <pre>XY</pre> comando para no dispositivos Philips.",
     "ip": "Puente IP",
     "message_connected": "Conectado al adaptador. La recuperación de usuario..",
     "message_connecting": "Conexión a un adaptador..",
     "message_error-user": "Podría no obtener el usuario de Puente!",
-    "message_noBridgeIp": "¡No se proporciona IP de puente! ",
+    "message_noBridgeIp": "Ningún puente IP dado! Escriba en un puente de IP!",
     "message_noconnection": "No hay conexión con el adaptador! Por favor, inicie adaptador primero.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "El uso de un Nombre de Dispositivo en el árbol de Objetos (en lugar de ID)",
     "onlyForDuplicates": "Utilizar el IDENTIFICADOR de dispositivo único para unambiguousness en caso de que los dispositivos tienen el mismo nombre",
     "other": "Otros Ajustes",
-    "passphrase": "Contraseña si la clave privada está encriptada adicionalmente",
+    "passphrase": "La contraseña, si la clave privada es, además, cifrada",
     "port": "Puente Del Puerto",
     "queue": "La cola de procesamiento (en segundos)",
-    "queueInfo": "Tiempo para el procesamiento de los comandos en la cola. Los comandos están en la cola y se procesan de forma conjunta. Esto permite aplicar la fuerza serval comandos a la vez (y no uno por uno) en sus dispositivos.",
+    "queueInfo": "Tiempo para el procesamiento de los comandos en la cola de espera (en segundos). Los comandos están en la cola y se procesan de forma conjunta. Esto permite aplicar varios comandos a la vez (y no uno por uno) en sus dispositivos.",
     "refresh": "Actualización (en segundos)",
     "refreshInfo": "Tiempo para la actualización de todos los ajustes / información (en segundos). Si se establece en 0, la configuración sólo se actualiza en el inicio.",
     "sceneInfo": "Con esta opción usted puede elegir la forma de los objetos para las escenas son nombrados en el árbol de objetos.",
-    "sceneNamingRoom": "Formato <pre>las escenas.<b>&lt;Nombre-de-Grupo&gt;</b>.<b>&lt;Nombre de la Escena&gt;</b>.nombre</pre>",
-    "sceneNamingScene": "Formato <pre>las escenas.<b>&lt;Nombre de la Escena&gt;</b>.<b>&lt;Nombre-de-Grupo&gt;</b>.nombre</pre>",
-    "secureConnection": "Use una conexión segura a Bridge (https)",
+    "sceneNamingRoom": "Formato <pre>escenas.<b>&lt;Nombre-de-Grupo&gt;</b>.<b>&lt;Nombre de la Escena&gt;</b>.nombre</pre>",
+    "sceneNamingScene": "Formato <pre>escenas.<b>&lt;Nombre de la Escena&gt;</b>.<b>&lt;Nombre-de-Grupo&gt;</b>.nombre</pre>",
+    "secureConnection": "Utilizar conexión segura para Puente (https)",
     "switchOnlyWhenOn": "Sólo a la luz de un grupo de personas que están en",
     "switchOnlyWhenOnInfo": "Esta opciones de conjuntos de luces en un grupo que son ya.",
     "sync": "Ajustes De Sincronización",
@@ -56,7 +56,7 @@
     "syncResources": "Sincronizar Los Recursos",
     "syncRules": "Sincronizar Las Reglas",
     "syncScenes": "Sincronizar Escenas",
-    "syncScenesDuplicates": "Sincronice escenas duplicadas también",
+    "syncScenesDuplicates": "Sincronizar duplicar escenas así",
     "syncSchedules": "Sincronizar Los Horarios",
     "syncSensors": "Sincronizar Los Sensores",
     "tab_alexa": "Alexa integración",
