--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Régler la luminosité à 0, lorsque l'appareil est éteint",
+    "briWhenNotReachable": "Régler la luminosité à 0, lorsque le périphérique n'est pas accessible",
     "briWhenNotReachableInfo": "Cette option définit le <pre>luminosité</pre> / <pre>niveau</pre> 0, lorsque l'appareil n'est pas accessible (<pre>accessible</pre> auf <pre>false</pre>).",
     "briWhenOff": "Régler la luminosité à 0, lorsque l'appareil est éteint",
     "briWhenOffInfo": "Cette option définit le <pre>luminosité</pre> / <pre>niveau</pre> 0, lorsque l'appareil est éteint (<pre>le</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Rejeter",
     "buttonNotAgain": "Ne pas afficher de nouveau",
     "button_closeModal": "Annuler",
     "button_getUser": "Obtenir de nouveaux utilisateurs",
-    "certChained": "Certificat chaîné",
-    "certPrivate": "Clé privée",
-    "certPublic": "Certificat public",
-    "connectionInformation": "Fournir les informations de connexion pour votre Teinte Pont",
-    "connectionTitle": "Paramètres de connexion pour la Teinte Pont",
-    "ctToXY": "Utilisez <pre> XY </ pre> au lieu de <pre> ct </ pre> (uniquement pour les appareils non Philips)",
+    "certChained": "Enchaînés Certificat",
+    "certPrivate": "La Clé Privée",
+    "certPublic": "Certificat Public",
+    "connectionTitle": "Paramètres de connexion",
+    "ctToXY": "Utiliser <pre>XY</pre> au lieu de <pre>ct</pre> (uniquement pour les non-appareils Philips)",
     "donateInformation": "N'hésitez pas à suggérer de nouvelles fonctionnalités via Github ou ioBroker forum. Si vous aimez cet adaptateur, vous les bienvenus pour faire un don.",
     "donateTitle": "Soutenir le développement de la teinte-extension de Carte!",
     "garbageCollector": "Supprimer obsolète appareils à partir d'objets",
     "garbageCollectorInfo": "Le Garbage Collector supprime les anciennes périphériques de l'arborescence des objets qui n'ont pas été mis à jour dans les 24 heures.",
-    "getUserInfo": "Appuyez sur le bouton de votre Teinte Pont la première! Ensuite, appuyez sur le bouton Obtenir de nouvelles de l'utilisateur.",
-    "hueToXY": "Utilisez XY au lieu de la teinte (uniquement pour les non-appareils Philips)",
-    "hueToXYInfo": "Lors du réglage de la teinte de l'état, non-Philips appareils risquent de ne pas traiter ce même si la commande a été appliquée avec succès. Avec cette option, la carte envoie toujours la teinte de l'état comme xy commande pour les non-appareils Philips.",
+    "getUserInfo": "Appuyez sur le bouton de votre Teinte Pont ou activer le mode de liaison de la première! Ensuite, appuyez sur le bouton Obtenir de nouvelles de l'utilisateur.",
+    "hueToXY": "Utiliser <pre>XY</pre> au lieu de <pre>teinte</pre> (uniquement pour les non-appareils Philips)",
+    "hueToXYInfo": "Lors du réglage de l' <pre>teinte</pre> état, non-Philips appareils risquent de ne pas traiter ce même si la commande a été appliquée avec succès. Avec cette option, la carte sera toujours envoyer le <pre>teinte</pre> état <pre>XY</pre> commande pour les non-appareils Philips.",
     "ip": "Pont de la propriété intellectuelle",
     "message_connected": "Connecté à l'adaptateur. La récupération de l'utilisateur..",
     "message_connecting": "La connexion à la carte..",
     "message_error-user": "Ne pouvait pas aller chercher de l'utilisateur à partir de la passerelle!",
-    "message_noBridgeIp": "Aucune IP de pont fournie! ",
+    "message_noBridgeIp": "Pas de pont IP donnée! Tapez un pont IP!",
     "message_noconnection": "Pas de connexion à la carte! S'il vous plaît commencer adaptateur.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Utilisation Nom de l'Appareil dans l'arborescence des Objets (au lieu de l'ID)",
     "onlyForDuplicates": "Utiliser l'ID de l'appareil uniquement pour unambiguousness dans le cas où les appareils ont le même nom",
     "other": "D'Autres Paramètres",
-    "passphrase": "Mot de passe si la clé privée est cryptée",
+    "passphrase": "Mot de passe si la clé privée est en outre chiffrés",
     "port": "Port De Pont",
     "queue": "File d'attente de traitement (en secondes)",
-    "queueInfo": "Le temps de traitement des commandes dans la file d'attente. Les commandes sont en attente et traitées ensemble. Cela permet d'appliquer serval commandes à la fois (et non pas un par un) sur vos appareils.",
+    "queueInfo": "Le temps de traitement des commandes dans la file d'attente (en secondes). Les commandes sont en attente et traitées ensemble. Cela permet d'appliquer plusieurs commandes à la fois (et non pas un par un) sur vos appareils.",
     "refresh": "D'actualisation (en secondes)",
     "refreshInfo": "Temps à l'actualisation de tous les paramètres / l'information (en secondes). Si la valeur est 0, les paramètres ne seront actualisées lors du démarrage.",
     "sceneInfo": "Avec cette option, vous pouvez choisir la manière dont les objets pour les scènes sont nommés au sein de l'arborescence de l'objet.",
-    "sceneNamingRoom": "Format <pre>les scènes.<b>&lt;Nom-du-Groupe&gt;</b>.<b>&lt;Nom de Scène&gt;</b>.nom</pre>",
-    "sceneNamingScene": "Format <pre>les scènes.<b>&lt;Nom de Scène&gt;</b>.<b>&lt;Nom-du-Groupe&gt;</b>.nom</pre>",
-    "secureConnection": "Utiliser une connexion sécurisée à Bridge (https)",
+    "sceneNamingRoom": "Format <pre>scènes.<b>&lt;Nom-du-Groupe&gt;</b>.<b>&lt;Nom de Scène&gt;</b>.nom</pre>",
+    "sceneNamingScene": "Format <pre>scènes.<b>&lt;Nom de Scène&gt;</b>.<b>&lt;Nom-du-Groupe&gt;</b>.nom</pre>",
+    "secureConnection": "Utiliser une connexion sécurisée au Pont (https)",
     "switchOnlyWhenOn": "Seulement régler les lampes d'un groupe qui sont sur",
     "switchOnlyWhenOnInfo": "Cette options jeux de lumières dans un groupe qui sont déjà.",
     "sync": "Paramètres De Synchronisation",
@@ -56,7 +56,7 @@
     "syncResources": "La Synchronisation Des Ressources",
     "syncRules": "Synchroniser Les Règles",
     "syncScenes": "Synchroniser Les Scènes",
-    "syncScenesDuplicates": "Synchronisez également les scènes dupliquées",
+    "syncScenesDuplicates": "Synchroniser dupliqué scènes ainsi",
     "syncSchedules": "Synchroniser Les Calendriers",
     "syncSensors": "Synchroniser Des Capteurs",
     "tab_alexa": "Alexa intégration",
