--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "De helderheid instellen op 0 in, wanneer het apparaat is uitgeschakeld",
+    "briWhenNotReachable": "De helderheid instellen op 0 in, wanneer het apparaat is niet bereikbaar",
     "briWhenNotReachableInfo": "Deze opties stelt u de <pre>helderheid</pre> / <pre>niveau</pre> 0 is, wanneer het apparaat niet bereikbaar is (<pre>bereikbaar</pre> auf <pre>false</pre>).",
     "briWhenOff": "De helderheid instellen op 0 in, wanneer het apparaat is uitgeschakeld",
     "briWhenOffInfo": "Deze opties stelt u de <pre>helderheid</pre> / <pre>niveau</pre> 0 is, wanneer het apparaat is uitgeschakeld (<pre>on</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Sluiten",
     "buttonNotAgain": "Don ' t show again",
     "button_closeModal": "Annuleren",
     "button_getUser": "Nieuwe gebruiker",
-    "certChained": "Geketend certificaat",
-    "certPrivate": "Prive sleutel",
-    "certPublic": "Openbaar certificaat",
-    "connectionInformation": "Maak de verbinding informatie voor uw Hue Bridge",
-    "connectionTitle": "Verbindingsinstellingen voor Hue Bridge",
-    "ctToXY": "Gebruik <pre> XY </pre> in plaats van <pre> ct </pre> (alleen voor niet-Philips-apparaten)",
+    "certChained": "Gekoppeld Certificaat",
+    "certPrivate": "Eigen Sleutel",
+    "certPublic": "Openbaar Certificaat",
+    "connectionTitle": "Instellingen verbinding",
+    "ctToXY": "Gebruik de <pre>XY - </pre> in plaats van <pre>ct - </pre> (alleen voor niet-Philips-apparaten)",
     "donateInformation": "Voel je vrij om te suggereren nieuwe functies via Github of ioBroker forum. Als je van deze adapter, die je erg welkom om te doneren.",
     "donateTitle": "Ondersteuning van de ontwikkeling van de hue-extended Adapter!",
     "garbageCollector": "Verwijderen van verouderde apparaten van objecten",
     "garbageCollectorInfo": "De Garbage Collector verwijdert verouderde apparaten uit het objectscherm die niet zijn aangepast binnen 24 uur.",
-    "getUserInfo": "Druk op de knop op uw Hue Bridge eerste! Druk vervolgens op de knop nieuwe gebruiker.",
-    "hueToXY": "Gebruik XY in plaats van tint (alleen voor niet-Philips-apparaten)",
-    "hueToXYInfo": "Bij het instellen van de tint van state, niet-Philips-apparaten kunnen niet verwerkt, hoewel de opdracht met succes is toegepast. Met deze optie worden de adapter zal altijd stuur de tint staat als xy opdracht om niet-Philips-apparaten.",
+    "getUserInfo": "Druk op de knop op uw Hue Bridge of activeert u de koppelingsmodus eerste! Druk vervolgens op de knop nieuwe gebruiker.",
+    "hueToXY": "Gebruik de <pre>XY - </pre> in plaats van <pre>hue</pre> (alleen voor niet-Philips-apparaten)",
+    "hueToXYInfo": "Bij het instellen van de <pre>hue</pre> - staat, niet-Philips-apparaten kunnen niet verwerkt, hoewel de opdracht met succes is toegepast. Met deze optie worden de adapter zal altijd stuur de <pre>hue</pre> staat <pre>XY - </pre> commando om de niet-Philips-apparaten.",
     "ip": "Brug IP",
     "message_connected": "Aangesloten op adapter. Het ophalen van de gebruiker..",
     "message_connecting": "Aansluiten op adapter..",
     "message_error-user": "Kon het niet halen van de gebruiker van de Brug!",
-    "message_noBridgeIp": "Geen bridge IP gegeven! ",
+    "message_noBridgeIp": "Geen brug IP gegeven! Typ een brug IP!",
     "message_noconnection": "Geen verbinding met adapter! Start de adapter eerste.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Gebruik de Naam van het Apparaat in het objectscherm (in plaats van ID)",
     "onlyForDuplicates": "Gebruik de apparaat-ID alleen voor unambiguousness in geval apparaten met dezelfde naam",
     "other": "Andere Instellingen",
-    "passphrase": "Wachtwoord als de privésleutel bovendien is gecodeerd",
+    "passphrase": "Wachtwoord indien de private sleutel wordt ook versleuteld",
     "port": "Brug-Poort",
     "queue": "Rij te verwerken (in seconden)",
-    "queueInfo": "Tijd voor de verwerking van opdrachten in de wachtrij. Opdrachten in een wachtrij worden geplaatst en verwerkt samen. Dit kunt toepassen serval commando ' s in een keer (en niet één-op-één) toe aan uw apparatuur.",
+    "queueInfo": "Tijd voor de verwerking van opdrachten in de wachtrij (in seconden). Opdrachten in een wachtrij worden geplaatst en verwerkt samen. Dit maakt het mogelijk om meerdere opdrachten in één keer (en niet één-op-één) toe aan uw apparatuur.",
     "refresh": "Vernieuwen (in seconden)",
     "refreshInfo": "Tijd voor het vernieuwen van alle instellingen / informatie (in seconden). Indien ingesteld op 0, instellingen zal alleen worden vernieuwd bij het opstarten.",
     "sceneInfo": "Met deze optie kunt u kiezen hoe objecten scènes zijn genoemd in het objectscherm.",
     "sceneNamingRoom": "Indeling <pre>scènes.<b>&lt;Naam van de Groep&gt;</b>.<b>&lt;Naam-van-Scene&gt;</b>.naam</pre>",
     "sceneNamingScene": "Indeling <pre>scènes.<b>&lt;Naam-van-Scene&gt;</b>.<b>&lt;Naam van de Groep&gt;</b>.naam</pre>",
-    "secureConnection": "Gebruik beveiligde verbinding met Bridge (https)",
+    "secureConnection": "Gebruik een beveiligde verbinding aan de Brug (https)",
     "switchOnlyWhenOn": "Alleen de lichten van een groep die op",
     "switchOnlyWhenOnInfo": "Deze opties stelt lichten in een groep die al.",
     "sync": "Synchronisatie-Instellingen",
@@ -56,7 +56,7 @@
     "syncResources": "Bronnen Synchroniseren",
     "syncRules": "Synchroniseren Regels",
     "syncScenes": "Synchroniseren Schermen",
-    "syncScenesDuplicates": "Synchroniseer ook dubbele scènes",
+    "syncScenesDuplicates": "Synchroniseren gedupliceerd scènes en",
     "syncSchedules": "Synchroniseren Schema ' S",
     "syncSensors": "Synchroniseren Sensoren",
     "tab_alexa": "Alexa integratie",
