--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Ustawić jasność na 0, gdy urządzenie jest wyłączone",
+    "briWhenNotReachable": "Ustaw jasność na 0, gdy urządzenie nie jest dostępny",
     "briWhenNotReachableInfo": "Ta opcja ustawia znacznik <pre>jasność i</pre> / <do>poziom</Pre> to do 0, gdy urządzenie nie jest dostępny (znaczniki<pre>można dostać i</pre> Auf <Pre>to kłamstwo i</pre>).",
     "briWhenOff": "Ustawić jasność na 0, gdy urządzenie jest wyłączone",
     "briWhenOffInfo": "Ta opcja ustawia znacznik <pre>jasność i</pre> / <do>poziom</Pre> to do 0, gdy urządzenie jest wyłączone (znaczniki<Pre>na</pre> Auf <Pre>to kłamstwo i</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Zwolnić",
     "buttonNotAgain": "Nie pokazuj więcej ",
     "button_closeModal": "Anuluj",
     "button_getUser": "Zdobądź nowych użytkowników",
-    "certChained": "Chained Certificate",
-    "certPrivate": "Prywatny klucz",
-    "certPublic": "Certyfikat publiczny",
-    "connectionInformation": "Podać informacje na temat podłączania do sieci Hue bridge",
-    "connectionTitle": "Ustawienia połączenia Hue bridge",
-    "ctToXY": "Użyj <pre> XY </pre> zamiast <pre> ct </pre> (tylko dla urządzeń firm innych niż Philips)",
+    "certChained": "Certyfikat Z Wątku",
+    "certPrivate": "Klucz Prywatny",
+    "certPublic": "Certyfikat Publiczny",
+    "connectionTitle": "Ustawienia połączenia ",
+    "ctToXY": "Użyj znaczników <pre>hu</pre> zamiast <pre>w KT i</pre> (tylko dla urządzeń Philips)",
     "donateInformation": "Nie wahaj się zaproponować nowe funkcje poprzez GitHub lub forum ioBroker. Jeśli podoba ci się ten zasilacz, możesz podarować.",
     "donateTitle": "Wsparcie rozwoju Hue-zaawansowany zasilacz!",
     "garbageCollector": "Usunięcie przestarzałych urządzeń od obiektów",
     "garbageCollectorInfo": "Garbage collector usuwa przestarzałe urządzenia z drzewa obiektów, które nie zostały zaktualizowane w ciągu 24 godzin.",
-    "getUserInfo": "Naciśnij przycisk na swoim Hue bridge pierwszy! Po tym, klikając na przycisk-dostaniesz nowy użytkownik.",
-    "hueToXY": "Używamy XY zamiast Hue (tylko dla urządzeń Philips)",
-    "hueToXYInfo": "Przy ustalaniu stanu odcień, nie Philips urządzenia mogą nie proces ten, choć zespół z powodzeniem stosuje. Dzięki tej opcji, zasilacz zawsze wyślemy państwowej odcień jak zespół XY, aby nie Philips urządzenia.",
+    "getUserInfo": "Naciśnij przycisk na swoim Hue bridge lub aktywować pierwszy tryb parowania! Po tym, klikając na przycisk-dostaniesz nowy użytkownik.",
+    "hueToXY": "Użyj znaczników <pre>hu</pre> zamiast <pre>w Hue i</pre> (tylko dla urządzeń Philips)",
+    "hueToXYInfo": "Podczas instalacji znacznika <pre>dźwięk</pre> w stanie, nie Philips urządzenia mogą nie proces ten, choć zespół z powodzeniem stosuje. Za pomocą tej opcji, zasilacz zawsze wyślemy znaczniki <pre>dźwięk</pre> w stanie jak <pre>hu</Pre> to polecenie dla niepalących Philips urządzenia.",
     "ip": "IP mostu",
     "message_connected": "Podłączony do zasilacza. Usuwanie użytkowników..",
     "message_connecting": "Podłączenie do zasilacza..",
     "message_error-user": "Nie może przynieść użytkownikowi od mostu!",
-    "message_noBridgeIp": "Nie podano adresu IP mostka! ",
+    "message_noBridgeIp": "Nie ma mostu, IZ daje! Wprowadź adres IP mostu!",
     "message_noconnection": "Nie ma związku z adapterem! Proszę, zacznij od zasilacza.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Używać nazwy urządzenia w drzewie obiektów (a nie ID)",
     "onlyForDuplicates": "Używamy identyfikator urządzenia tylko dla jednoznaczności w przypadku urządzenia o tej samej nazwie",
     "other": "Inne Opcje",
-    "passphrase": "Hasło, jeśli klucz prywatny jest dodatkowo szyfrowany",
+    "passphrase": "Hasło jeśli klucz prywatny dodatkowo szyfrowane",
     "port": "Most Port",
     "queue": "Przetwarzanie kolejki (w sekundach)",
-    "queueInfo": "Czas na przetwarzanie poleceń w kolejce. Polecenia są umieszczane w kolejce i przetwarzane razem. To pozwala na stosowanie polecenia сервал raz (a nie jeden) na swoich urządzeniach.",
+    "queueInfo": "Czas do obsługi poleceń w kolejce (w sekundach). Polecenia są umieszczane w kolejce i przetwarzane razem. Pozwala to zastosować kilka drużyn jednocześnie (a nie jeden) na swoich urządzeniach.",
     "refresh": "Aktualizacje (w sekundach)",
     "refreshInfo": "Podczas aktualizacji wszystkie ustawienia / informacje (w sekundach). Jeżeli określono wartość 0, ustawienia zostaną zaktualizowane po uruchomieniu.",
     "sceneInfo": "Za pomocą tej opcji można wybrać, jak obiekty sceny nazwy w drzewie obiektów.",
-    "sceneNamingRoom": "Format znacznika <pre>scen.<b>&lt;nazwa-z-grupy&GT;</b>.<b>&lt;nazwa-z-scena&GT;</b>.imię i</pre>",
-    "sceneNamingScene": "Format znacznika <pre>scen.<b>&lt;nazwa-z-scena&GT;</b>.<b>&lt;nazwa-z-grupy&GT;</b>.imię i</pre>",
-    "secureConnection": "Użyj bezpiecznego połączenia z mostem (https)",
+    "sceneNamingRoom": "Format znacznika <pre>sceny.<b>&lt;nazwa-z-grupy&GT;</b>.<b>&lt;nazwa-z-scena&GT;</b>.imię i</pre>",
+    "sceneNamingScene": "Format znacznika <pre>sceny.<b>&lt;nazwa-z-scena&GT;</b>.<b>&lt;nazwa-z-grupy&GT;</b>.imię i</pre>",
+    "secureConnection": "Użyj bezpiecznego połączenia z mostu (przez protokół HTTPS)",
     "switchOnlyWhenOn": "Tylko zainstalować światła grupy, które znajdują się na",
     "switchOnlyWhenOnInfo": "Ta opcja ustawia światła do grupy, która już na.",
     "sync": "Ustawienia Synchronizacji ",
@@ -56,7 +56,7 @@
     "syncResources": "Synchronizacja Zasobów",
     "syncRules": "Zasady Synchronizacji ",
     "syncScenes": "Synchronizować Sceny",
-    "syncScenesDuplicates": "Synchronizuj również zduplikowane sceny",
+    "syncScenesDuplicates": "Synchronizacja powielane sceny również",
     "syncSchedules": "Zsynchronizować Rozkłady Jazdy",
     "syncSensors": "Synchronizować Czujniki",
     "tab_alexa": "Alexa integracji",
