--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Ajuste o brilho para 0, quando o dispositivo está desligado",
+    "briWhenNotReachable": "Ajuste o brilho para 0, quando o dispositivo não está acessível",
     "briWhenNotReachableInfo": "Esta opção define o <pre>brilho</pre> / <pre>nível</pre> 0, quando o dispositivo não está acessível (<pre>acessível</pre> auf <pre>false</pre>).",
     "briWhenOff": "Ajuste o brilho para 0, quando o dispositivo está desligado",
     "briWhenOffInfo": "Esta opção define o <pre>brilho</pre> / <pre>nível</pre> 0, quando o dispositivo está desligado (<pre>no</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Fechar",
     "buttonNotAgain": "Não mostrar novamente",
     "button_closeModal": "Cancelar",
     "button_getUser": "Obter novo usuário",
-    "certChained": "Certificado encadeado",
-    "certPrivate": "Chave privada",
-    "certPublic": "Certificado público",
-    "connectionInformation": "Forneça informações de conexão para o seu Tonalidade Ponte",
-    "connectionTitle": "Configurações de conexão de Tonalidade Ponte",
-    "ctToXY": "Use <pre> XY </pre> em vez de <pre> ct </pre> (apenas para dispositivos que não sejam da Philips)",
+    "certChained": "Certificado Em Cadeia",
+    "certPrivate": "Chave Privada",
+    "certPublic": "Certificado Público",
+    "connectionTitle": "Configurações de conexão",
+    "ctToXY": "Use <pre>XY</pre> em vez de <pre>ct</pre> (somente para não-Philips dispositivos)",
     "donateInformation": "Sinta-se livre para sugerir novos recursos via Github ou ioBroker fórum. Se você gosta deste adaptador, você é muito bem-vindo para doar.",
     "donateTitle": "Apoiar o desenvolvimento da tonalidade expandida do Adaptador!",
     "garbageCollector": "Excluir desatualizado dispositivos de objetos",
     "garbageCollectorInfo": "O Coletor de Lixo exclui desatualizado dispositivos da árvore de objectos que não tenham sido atualizadas 24 horas.",
-    "getUserInfo": "Pressione o botão no seu Tonalidade Ponte de primeira! Depois, pressione o botão Obter novo usuário.",
-    "hueToXY": "Usar o gráfico de DISPERSÃO, em vez de matiz (somente para não-Philips dispositivos)",
-    "hueToXYInfo": "Quando a configuração de tonalidade do estado, não-Philips dispositivos podem falhar para este processo, mesmo que o comando foi aplicada com êxito. Com esta opção, o adaptador irá enviar sempre a tonalidade estado como xy comando para não-Philips dispositivos.",
+    "getUserInfo": "Pressione o botão no seu Tonalidade Ponte ou ativar o modo de emparelhamento primeiro! Depois, pressione o botão Obter novo usuário.",
+    "hueToXY": "Use <pre>XY</pre> em vez de <pre>hue</pre> (somente para não-Philips dispositivos)",
+    "hueToXYInfo": "Quando a configuração de <pre>hue</pre> estado, não Philips dispositivos podem falhar para este processo, mesmo que o comando foi aplicada com êxito. Com esta opção, o adaptador irá enviar sempre o <pre>hue</pre> estado <pre>XY</pre> comando para não-Philips dispositivos.",
     "ip": "Ponte IP",
     "message_connected": "Conectado ao adaptador. Recuperar usuário..",
     "message_connecting": "Ligar a placa..",
     "message_error-user": "Pode não obter do usuário a partir da Ponte!",
-    "message_noBridgeIp": "Nenhum IP de ponte fornecido! ",
+    "message_noBridgeIp": "Nenhuma ponte IP dado! Digite uma ponte IP!",
     "message_noconnection": "Não há ligação com o adaptador! Por favor, inicie o adaptador de primeira.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Usar o Nome de Dispositivo na árvore do Objeto (em vez do ID)",
     "onlyForDuplicates": "Use o ID do dispositivo apenas para unambiguousness no caso de dispositivos com o mesmo nome",
     "other": "Outras Configurações",
-    "passphrase": "Senha se a chave privada for criptografada adicionalmente",
+    "passphrase": "Palavra-passe, se a chave privada é além disso criptografados",
     "port": "Ponte Do Porto",
     "queue": "A fila de processamento (em segundos)",
-    "queueInfo": "O tempo para o processamento de comandos na fila. Os comandos são colocados em fila e processados em conjunto. Isto permite aplicar serval comandos de uma vez (e não de um em um) em todos os seus dispositivos.",
+    "queueInfo": "O tempo para o processamento de comandos na fila de espera (em segundos). Os comandos são colocados em fila e processados em conjunto. Isto permite aplicar vários comandos de uma vez (e não de um em um) em todos os seus dispositivos.",
     "refresh": "Atualização (em segundos)",
     "refreshInfo": "Tempo para atualizar todas as configurações / informações (em segundos). Se definido como 0, as definições só serão atualizadas na inicialização.",
     "sceneInfo": "Com esta opção você pode escolher a forma como os objetos para as cenas são nomeados dentro do objeto árvore.",
     "sceneNamingRoom": "Formato <pre>cenas.<b>&lt;Nome-do-Grupo - &gt;</b>.<b>&lt;Nome-de-Cena&gt;</b>.nome</pre>",
     "sceneNamingScene": "Formato <pre>cenas.<b>&lt;Nome-de-Cena&gt;</b>.<b>&lt;Nome-do-Grupo - &gt;</b>.nome</pre>",
-    "secureConnection": "Usar conexão segura com o Bridge (https)",
+    "secureConnection": "Utilizar conexão segura para a Ponte (https)",
     "switchOnlyWhenOn": "Só conjunto de luzes de um grupo que estão na",
     "switchOnlyWhenOnInfo": "Esta opção define as luzes em um grupo que está ligado.",
     "sync": "Definições De Sincronização",
@@ -56,7 +56,7 @@
     "syncResources": "Sincronizar Recursos",
     "syncRules": "Sincronizar Regras",
     "syncScenes": "Sincronizar Cenas",
-    "syncScenesDuplicates": "Sincronize cenas duplicadas também",
+    "syncScenesDuplicates": "Sincronizar duplicado cenas bem",
     "syncSchedules": "Sincronizar Agendas",
     "syncSensors": "Sincronizar Sensores",
     "tab_alexa": "Alexa integração",
