--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Установить яркость до 0, когда устройство выключено",
+    "briWhenNotReachable": "Установите яркость на 0, когда устройства недоступен",
     "briWhenNotReachableInfo": "Эта опция устанавливает тега <pre>яркость и</pre> / <до>уровня</Pre> это к 0, когда устройства недоступен (теги<pre>можно добраться и</pre> Ауф <Pre>это ложь и</pre>).",
     "briWhenOff": "Установить яркость до 0, когда устройство выключено",
     "briWhenOffInfo": "Эта опция устанавливает тега <pre>яркость и</pre> / <до>уровня</Pre> это к 0, когда устройство выключено (теги<Pre>на</pre> в Ауф <Pre>это ложь и</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Уволить",
     "buttonNotAgain": "Больше не показывать ",
     "button_closeModal": "Отменить",
     "button_getUser": "Получите новых пользователей",
-    "certChained": "Цепной сертификат",
-    "certPrivate": "Закрытый ключ",
-    "certPublic": "Публичный сертификат",
-    "connectionInformation": "Предоставить информацию о подключении к вашей Hue мост",
-    "connectionTitle": "Настройки подключения для Hue мост",
-    "ctToXY": "Используйте <pre> XY </ pre> вместо <pre> ct </ pre> (только для устройств не от Philips)",
+    "certChained": "Сертификат Из Цепочки",
+    "certPrivate": "Закрытый Ключ",
+    "certPublic": "Публичный Сертификат",
+    "connectionTitle": "Параметры подключения ",
+    "ctToXY": "Используйте теги <pre>ху</предварительно> вместо <pre>в КТ и</pre> (только для не-устройств от Philips)",
     "donateInformation": "Не стесняйтесь предложить новые функции через GitHub или форуме ioBroker. Если вам нравится этот адаптер, вы можете пожертвовать.",
     "donateTitle": "Поддержка развития Хюэ-расширенный адаптер!",
     "garbageCollector": "Удаление устаревших устройств от объектов",
     "garbageCollectorInfo": "Сборщик мусора удаляет устаревшие приборы из дерева объектов, которые не были обновлены в течение 24 часов.",
-    "getUserInfo": "Нажмите кнопку на вашем Hue мост первым! После этого, нажав на кнопку-получишь новый пользователь.",
-    "hueToXY": "Используем XY вместо Хюэ (только для не-устройств от Philips)",
-    "hueToXYInfo": "При установлении государственного оттенок, не Филипс устройства могут не процесс этот хоть и команда успешно применяется. С этой опцией, адаптер всегда вышлем государственной оттенок как команда XY, чтобы не Филипс устройства.",
+    "getUserInfo": "Нажмите кнопку на вашем Hue мост или активировать первый режим сопряжения! После этого, нажав на кнопку-получишь новый пользователь.",
+    "hueToXY": "Используйте теги <pre>ху</предварительно> вместо <pre>в Хюэ и</pre> (только для не-устройств от Philips)",
+    "hueToXYInfo": "При установке тега <pre>тон</pre> в состоянии, не Филипс устройства могут не процесс этот хоть и команда успешно применяется. С помощью этой опции, адаптер всегда вышлем теги <pre>тон</pre> в состоянии как <пре>ху</Pre> это команда для некурящих Филипс устройства.",
     "ip": "IP-моста",
     "message_connected": "Подключен к адаптеру. Извлечение пользователей..",
     "message_connecting": "Подключение к адаптеру..",
     "message_error-user": "Не может принести пользователю от моста!",
-    "message_noBridgeIp": "IP-адрес моста не указан! ",
+    "message_noBridgeIp": "Нет моста ИС дано! Введите IP-моста!",
     "message_noconnection": "Нет связи с адаптером! Пожалуйста, начните адаптера.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Использовать имя устройства в дереве объектов (а не ID)",
     "onlyForDuplicates": "Используем идентификатор устройства только для однозначности в случае устройства с тем же именем",
     "other": "Другие Параметры",
-    "passphrase": "Пароль, если закрытый ключ дополнительно зашифрован",
+    "passphrase": "Пароль если секретный ключ дополнительно шифруется",
     "port": "Мост Порт",
     "queue": "Обработка очереди (в секундах)",
-    "queueInfo": "Время на обработку команд в очереди. Команды помещаются в очередь и обрабатываются вместе. Это позволяет применять команды сервал сразу (и не по одному) на ваших устройствах.",
+    "queueInfo": "Время для обработки команд в очереди (в секундах). Команды помещаются в очередь и обрабатываются вместе. Это позволяет применить несколько команд одновременно (и не один) на ваших устройствах.",
     "refresh": "Обновления (в секундах)",
     "refreshInfo": "Время обновления все настройки / информации (в секундах). Если задано значение 0, параметры будут обновляться при запуске.",
     "sceneInfo": "С помощью этой опции вы можете выбрать, как объекты для сцены имени в дереве объектов.",
-    "sceneNamingRoom": "Формат тега <pre>сцен.<б>&lt;имя-из-группы&ГТ;</б>.<б>&lt;имя-из-сцена&ГТ;</б>.имя и</pre>",
-    "sceneNamingScene": "Формат тега <pre>сцен.<б>&lt;имя-из-сцена&ГТ;</б>.<б>&lt;имя-из-группы&ГТ;</б>.имя и</pre>",
-    "secureConnection": "Используйте безопасное соединение с мостом (https)",
+    "sceneNamingRoom": "Формат тега <pre>сцены.<б>&lt;имя-из-группы&ГТ;</б>.<б>&lt;имя-из-сцена&ГТ;</б>.имя и</pre>",
+    "sceneNamingScene": "Формат тега <pre>сцены.<б>&lt;имя-из-сцена&ГТ;</б>.<б>&lt;имя-из-группы&ГТ;</б>.имя и</pre>",
+    "secureConnection": "Использовать защищенное соединение с моста (через HTTPS)",
     "switchOnlyWhenOn": "Только установить фонари группы, которые находятся на",
     "switchOnlyWhenOnInfo": "Эта опция устанавливает фонари в группу, которая уже на.",
     "sync": "Настройки Синхронизации ",
@@ -56,7 +56,7 @@
     "syncResources": "Синхронизация Ресурсов",
     "syncRules": "Правила Синхронизации ",
     "syncScenes": "Синхронизировать Сцены",
-    "syncScenesDuplicates": "Синхронизируйте дублированные сцены, а также",
+    "syncScenesDuplicates": "Синхронизация дублируются сцены также",
     "syncSchedules": "Синхронизировать Расписания",
     "syncSensors": "Синхронизировать Датчики",
     "tab_alexa": "Алекса интеграции",
