--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "Impostare la luminosità a 0, quando il dispositivo è spento",
+    "briWhenNotReachable": "Impostare la luminosità a 0, quando il dispositivo non è raggiungibile",
     "briWhenNotReachableInfo": "Questa opzione imposta il tag <pre>luminosità</pre> / <pre>livello</pre> 0, quando il dispositivo non è raggiungibile (<pre>raggiungibile</pre> auf <pre>false</pre>).",
     "briWhenOff": "Impostare la luminosità a 0, quando il dispositivo è spento",
     "briWhenOffInfo": "Questa opzione imposta il tag <pre>luminosità</pre> / <pre>livello</pre> 0, quando il dispositivo è spento (<pre>su</pre> auf <pre>false</pre>).",
+    "bridgeType": "",
     "buttonDismiss": "Chiudere",
     "buttonNotAgain": "Non mostrare più",
     "button_closeModal": "Annulla",
     "button_getUser": "Ottenere nuovo utente",
-    "certChained": "Certificato incatenato",
-    "certPrivate": "Chiave privata",
-    "certPublic": "Certificato pubblico",
-    "connectionInformation": "Fornire le informazioni di connessione per il Bridge Hue",
-    "connectionTitle": "Impostazioni di connessione per Tonalità Ponte",
-    "ctToXY": "Usa <pre> XY </pre> invece di <pre> ct </pre> (solo per dispositivi non Philips)",
+    "certChained": "Certificato A Catena",
+    "certPrivate": "Chiave Privata",
+    "certPublic": "Certificato Pubblico",
+    "connectionTitle": "Impostazioni di connessione",
+    "ctToXY": "Utilizzare <pre>XY</pre> invece di <pre>ct</pre> (solo per i non-dispositivi Philips)",
     "donateInformation": "Sentitevi liberi di suggerire nuove funzionalità tramite Github o ioBroker forum. Se ti piace questo adattatore, è molto benvenuto a donare.",
     "donateTitle": "Sostenere lo sviluppo della tonalità esteso Adattatore!",
     "garbageCollector": "Elimina i dispositivi da oggetti",
     "garbageCollectorInfo": "Il Garbage Collector elimina obsoleto dispositivi dalla struttura ad albero di oggetti che non sono stati aggiornati entro 24 ore.",
-    "getUserInfo": "Premere il pulsante sulla Tonalità del Ponte di prima! Successivamente, premere il pulsante di Ottenere un nuovo utente.",
-    "hueToXY": "XY invece di tonalità (solo per i non-dispositivi Philips)",
-    "hueToXYInfo": "Quando si imposta la tonalità di stato, camere non-dispositivi Philips potrebbe non riuscire a processo anche se il comando è stato applicato con successo. Con questa opzione, la scheda di inviare sempre la tonalità di stato xy comando non-dispositivi Philips.",
+    "getUserInfo": "Premere il pulsante di Tonalità Ponte o attivare la modalità di associazione prima! Successivamente, premere il pulsante di Ottenere un nuovo utente.",
+    "hueToXY": "Utilizzare <pre>XY</pre> invece di <pre>tonalità</pre> (solo per i non-dispositivi Philips)",
+    "hueToXYInfo": "Quando si imposta il <pre>tonalità</pre> stato, camere non-dispositivi Philips potrebbe non riuscire a processo anche se il comando è stato applicato con successo. Con questa opzione, la scheda di inviare sempre il <pre>tonalità</pre> stato <pre>XY</pre> comando non-dispositivi Philips.",
     "ip": "Ponte IP",
     "message_connected": "Collegato all'adattatore. Il recupero di utente..",
     "message_connecting": "Collegamento alla scheda..",
     "message_error-user": "Non è riuscito a recuperare utente dal Ponte!",
-    "message_noBridgeIp": "Nessun bridge IP fornito! ",
+    "message_noBridgeIp": "Nessun ponte IP dato! Digitare un ponte IP!",
     "message_noconnection": "Nessun collegamento alla scheda! Si prega di avviare prima l'adattatore.",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "Utilizzare il Nome del Dispositivo in Oggetto albero (invece di ID)",
     "onlyForDuplicates": "Utilizzare il dispositivo solo ID per univocità nel caso di dispositivi con lo stesso nome",
     "other": "Altre Impostazioni",
-    "passphrase": "Password se la chiave privata è ulteriormente crittografata",
+    "passphrase": "La Password se la chiave privata è cifrate",
     "port": "Ponte Di Porta",
     "queue": "La coda di elaborazione (in secondi)",
-    "queueInfo": "Il tempo per l'elaborazione dei comandi in coda. I comandi sono in coda e trattati insieme. Questo permette di applicare serval comandi in una sola volta (e non uno) sui vostri dispositivi.",
+    "queueInfo": "Il tempo per l'elaborazione dei comandi in coda (in secondi). I comandi sono in coda e trattati insieme. Questo permette di applicare diversi comandi in una sola volta (e non uno) sui vostri dispositivi.",
     "refresh": "Aggiornamento (in secondi)",
     "refreshInfo": "Tempo per l'aggiornamento di tutte le impostazioni / informazioni (in secondi). Se impostato a 0, le impostazioni vengono solo aggiornati all'avvio.",
     "sceneInfo": "Con questa opzione si può scegliere come oggetti per scene sono indicati all'interno dell'albero di oggetti.",
-    "sceneNamingRoom": "Formato <pre>le scene.<b>&lt;Nome del Gruppo&gt;</b>.<b>&lt;Nome-di-Scena&gt;</b>.nome</pre>",
-    "sceneNamingScene": "Formato <pre>le scene.<b>&lt;Nome-di-Scena&gt;</b>.<b>&lt;Nome del Gruppo&gt;</b>.nome</pre>",
-    "secureConnection": "Usa connessione sicura a Bridge (https)",
+    "sceneNamingRoom": "Formato <pre>scene.<b>&lt;Nome del Gruppo&gt;</b>.<b>&lt;Nome-di-Scena&gt;</b>.nome</pre>",
+    "sceneNamingScene": "Formato <pre>scene.<b>&lt;Nome-di-Scena&gt;</b>.<b>&lt;Nome del Gruppo&gt;</b>.nome</pre>",
+    "secureConnection": "Utilizza connessione sicura al Ponte (https)",
     "switchOnlyWhenOn": "Solo impostare le luci di un gruppo che sono",
     "switchOnlyWhenOnInfo": "Questo opzioni di set di luci in un gruppo che sono già.",
     "sync": "Impostazioni Di Sincronizzazione",
@@ -56,7 +56,7 @@
     "syncResources": "Sincronizzare Le Risorse",
     "syncRules": "Sincronizzare Le Regole",
     "syncScenes": "Sincronizzare Le Scene",
-    "syncScenesDuplicates": "Sincronizza anche scene duplicate",
+    "syncScenesDuplicates": "Sincronizzare duplicato scene",
     "syncSchedules": "Sincronizzare Orari",
     "syncSensors": "Sincronizzare I Sensori",
     "tab_alexa": "Alexa integrazione",
