--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,30 +1,30 @@
 {
-    "briWhenNotReachable": "亮度设置为0，当装置被关闭",
+    "briWhenNotReachable": "亮度设置为0，当时的设备没到达",
     "briWhenNotReachableInfo": "这种选项将<预>亮度</预>/<预>级别</预>0,当设备是不可访问(<预>可访问</预>auf<预>假</预>).",
     "briWhenOff": "亮度设置为0，当装置被关闭",
     "briWhenOffInfo": "这种选项将<预>亮度</预>/<预>级别</预>0，当该装置被关闭(<预>就</预>auf<预>假</预>).",
+    "bridgeType": "",
     "buttonDismiss": "驳回",
     "buttonNotAgain": "不要再显示",
     "button_closeModal": "取消",
     "button_getUser": "获得新的用户",
-    "certChained": "连锁证书",
-    "certPrivate": "私钥",
-    "certPublic": "公开证书",
-    "connectionInformation": "提供连接信息顺桥",
-    "connectionTitle": "连接设置顺桥",
-    "ctToXY": "使用<pre> XY </ pre>代替<pre> ct </ pre>（仅适用于非飞利浦设备）",
+    "certChained": "链接证书",
+    "certPrivate": "私人钥匙",
+    "certPublic": "公共证书",
+    "connectionTitle": "连接设置",
+    "ctToXY": "使用<预>x-y</预>，而不是<预>ct</预>(仅适用于非飞利浦的设备)",
     "donateInformation": "随时提出新的功能，通过审查或ioBroker论坛。 如果你喜欢这个转接器，你非常受欢迎的捐赠。",
     "donateTitle": "支持发展的顺化扩展适配器!",
     "garbageCollector": "删除过时的设备的对象",
     "garbageCollectorInfo": "垃圾收集中删除过时的设备的对象树尚未更新在24小时内。",
-    "getUserInfo": "按下按钮你顺桥第一！ 后来，按下按钮-获得新的用户.",
-    "hueToXY": "使用x-y而不是色调(仅适用于非飞利浦的设备)",
-    "hueToXYInfo": "设定时的顺国家、非飞利浦设备可能无法处理此，即使该命令已成功应用。 与此选项，适配器将总是发送的色调国家作为xy命令以非飞利浦设备。",
+    "getUserInfo": "按下按钮你顺桥或激活匹配模式的第一！ 后来，按下按钮-获得新的用户.",
+    "hueToXY": "使用<预>x-y</预>，而不是<预>色</预>(仅适用于非飞利浦的设备)",
+    "hueToXYInfo": "当设置<预>色</预>国家、非飞利浦设备可能无法处理此，即使该命令已成功应用。 与此选项，适配器将总是发送<预>色</预>国家作为<预>x-y</预>的命令以非飞利浦设备。",
     "ip": "桥的IP",
     "message_connected": "连接器。 检索的用户..",
     "message_connecting": "连接到适配器..",
     "message_error-user": "不能取用户从桥！",
-    "message_noBridgeIp": "没有提供桥接IP！",
+    "message_noBridgeIp": "没有桥IP给予！ 在桥IP!",
     "message_noconnection": "没有连接到适配器! 请启动器的第一个。",
     "modalMessage": "modalMessage",
     "modalTitle": "modalTitle",
@@ -34,16 +34,16 @@
     "nameInfo": "使用的设备名称中的目标树(而不是ID)",
     "onlyForDuplicates": "使用的设备ID只unambiguousness在的情况下设备的具有相同的名称",
     "other": "其他的设置",
-    "passphrase": "密码（如果还加密了私钥）",
+    "passphrase": "密码，如果私人钥匙被另外的加密",
     "port": "桥口",
     "queue": "的队列中处理(秒)",
-    "queueInfo": "处理时间命令在队列中。 命令是排队，并处理在一起。 这将允许申请薮命令，一旦(而不是逐一)在您的设备。",
+    "queueInfo": "处理时间命令在队列中(秒)。 命令是排队，并处理在一起。 这允许用若干命令，一旦(而不是逐一)在您的设备。",
     "refresh": "刷新(秒)",
     "refreshInfo": "时间用于清爽的所有设置/信息(秒)。 如果设定为0、设置将只能刷新启动。",
     "sceneInfo": "这个选择你可以选择对象的场景名内对象的树。",
-    "sceneNamingRoom": "格式<预>色扩展。0.场景。<b>和名称的组gt;</b>.<b>和名称的场景-gt;</b>.名</预>",
-    "sceneNamingScene": "格式<预>色扩展。0.场景。<b>和名称的场景-gt;</b>.<b>和名称的组gt;</b>.名</预>",
-    "secureConnection": "使用安全连接到网桥（https）",
+    "sceneNamingRoom": "格式<预>的场景。<b>和名称的组gt;</b>.<b>和名称的场景-gt;</b>.名</预>",
+    "sceneNamingScene": "格式<预>的场景。<b>和名称的场景-gt;</b>.<b>和名称的组gt;</b>.名</预>",
+    "secureConnection": "使用安全连接桥(https)",
     "switchOnlyWhenOn": "仅设置灯光的一个组都在",
     "switchOnlyWhenOnInfo": "这项集中的灯光一组上了。",
     "sync": "同步设置",
